Semi-fixed overflow problem

--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ body{
   display: table;
   clear: both;
   content: "";
-  overflow: auto;
+ 
   
 }
 
@@ -41,18 +41,19 @@ p.card-text{
     height: 50vh;
     /* padding-top: 55px; */
     position: relative;
-    overflow: auto;
+    
   }
   
  #about, #education, #skills{
       height: 45vh;
       /* padding-top: 55px; */
       position: relative;
-      overflow: auto;
+      
   }
   div{
   display: block;
   padding: 0px;
+  overflow: auto;
 }
 
 div.col-md-12{
